# Warnke-et-al-2023-figures

./: README.md  environment.yml  environment_3D_viz.yml  environment_complete.yml  environment_data.yml  environment_tide.yml  environment_transforms.yml  functions_figures.py  pyproject.toml  requirements.txt  requirements_3D_viz.txt  requirements_complete.txt  requirements_data.txt  requirements_tide.txt  requirements_transforms.txt  setup.cfg
Figure-03_methods_flowchart_workflow/: figure_seismic-wiggle-trace.py  figure_slice_noisy-vs-smooth.py
Figure-04_methods_static_correction/: figure_methods_static_correction.py
Figure-05_methods_tide_compensation/: figure_methods_tide_compensation.py
Figure-06_methods_mistie_correction/: figure_mistie_correction.py
Figure-08_methods_resample_env/: 20200702231201_UTM60S_trace-50_raw.csv  figure_methods_resample_envelope.py
Figure-09_results_vertical_offsets/: figure_results_vertical_offsets.py
Figure-10_results_TOPAS_processing/: figure_results_TOPAS_processing.py
Figure-11_results_transforms/: SHEARLET_time_metadata.yml  cube_freq_selected_traces.nc  cube_time_selected_traces.nc  figure_results_transforms.py
Figure-12_results_time_vs_frequency_interp/: figure_results_time_vs_frequency_interp.py  runtimes_time_vs_freq_domain.xlsx
Figure-13_results_niterations/: figure_results_niterations.py  runtimes_cube_center_IDW_env_5x5m_0+05ms_freq-il-xl_preproc_FFT_hard_niter-10.txt  runtimes_cube_center_IDW_env_5x5m_0+05ms_freq-il-xl_preproc_FFT_hard_niter-100.txt  (+2 more)
(+16 files in other folders)
