[metadata]
author = 
author_email = 
name = 
version = 0.1.0
description = Reproducable figure for GEOPHYSICS paper introducing open-source workflow to generate pseudo-3D cube from 2D profiles using POCS interpolation.
keywords = SBP, seismic, interpolation
long_description = file: README.md
license = GNU GPLv3
license_files = LICENSE
platform = any
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    pandas
    matplotlib
    scipy
    cmocean
    
[options.extras_require]
data = 
    xarray[complete]
    xrft
    h5netcdf
    dask[complete]
    segyio
    
tide =
    %(data)s
    tpxo-tide-prediction @ git+https://github.com/fwrnke/tpxo-tide-prediction.git
    
transforms = 
    %(data)s
    pywavelet
    pyshearlets @ git+https://github.com/fwrnke/PyShearlets.git
    
3d =
    %(data)s
    rioxarray
    pyproj   
    pyvista

complete = 
    %(data)s
    %(tide)s
    %(transforms)s
    %(3d)s
    